// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderEndStartRadius renders 0 1`] = `
Array [
  .c0 {
  border-end-start-radius: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-start-radius: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-start-radius: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-start-radius: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderEndStartRadius renders function 1`] = `
Array [
  .c0 {
  border-end-start-radius: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-start-radius: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-start-radius: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-start-radius: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderEndStartRadius renders invalid theme path 1`] = `
Array [
  .c0 {
  border-end-start-radius: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-start-radius: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-start-radius: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-start-radius: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderEndStartRadius renders negative number 1`] = `
Array [
  .c0 {
  border-end-start-radius: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-start-radius: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-start-radius: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-start-radius: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderEndStartRadius renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-end-start-radius: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-end-start-radius: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-end-start-radius: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-end-start-radius: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-end-start-radius: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-end-start-radius: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-end-start-radius: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-end-start-radius: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-end-start-radius: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-end-start-radius: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-end-start-radius: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-end-start-radius: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-end-start-radius: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-end-start-radius: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-end-start-radius: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-end-start-radius: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderEndStartRadius renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    border-end-start-radius: July;
  }
}

@media April {
  .c0 {
    border-end-start-radius: August;
  }
}

@media January {
  .c0 {
    border-end-start-radius: September;
  }
}

@media April {
  .c0 {
    border-end-start-radius: November;
  }
}

@media June {
  .c0 {
    border-end-start-radius: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-end-start-radius: July;
  }
}

@media April {
  .c0 {
    border-end-start-radius: August;
  }
}

@media January {
  .c0 {
    border-end-start-radius: September;
  }
}

@media April {
  .c0 {
    border-end-start-radius: November;
  }
}

@media June {
  .c0 {
    border-end-start-radius: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-end-start-radius: January;
  }
}

@media April {
  .c0 {
    border-end-start-radius: December;
  }
}

@media January {
  .c0 {
    border-end-start-radius: April;
  }
}

@media April {
  .c0 {
    border-end-start-radius: May;
  }
}

@media June {
  .c0 {
    border-end-start-radius: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-end-start-radius: January;
  }
}

@media April {
  .c0 {
    border-end-start-radius: December;
  }
}

@media January {
  .c0 {
    border-end-start-radius: April;
  }
}

@media April {
  .c0 {
    border-end-start-radius: May;
  }
}

@media June {
  .c0 {
    border-end-start-radius: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderEndStartRadius renders postitive number 1`] = `
Array [
  .c0 {
  border-end-start-radius: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-start-radius: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-start-radius: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-start-radius: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderEndStartRadius renders string 1`] = `
Array [
  .c0 {
  border-end-start-radius: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-start-radius: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-start-radius: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-start-radius: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderEndStartRadius renders valid theme path 1`] = `
Array [
  .c0 {
  border-end-start-radius: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-start-radius: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-start-radius: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-end-start-radius: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
